--- a/idex.html
+++ b/idex.html
@@ -3,44 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>IX Software Engineering</title>
         <link rel="stylesheet" type="text/css" href="assets/CSS/main.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        
     </head>
-    <body id="home" class="open-left">
-        <section class="center">
-            <header>
-                <nav>
-                    Samruddhi Deshpande
-                </nav>
-            </header>
-            <section>
-                    <figure class="hero">
-                        <img src="assets\img\IMG_1631.JPG", alt="Me!">
-                            <figcaption>
-                                This is an picture of me taken as a group picture.
-                            </figcaption>
-                        </figure>
-                    <h2>
-                        Little about me:
-                    </h2>
-                    <p>
-                        Heya Everyone!! 
-                    </p>
-                    <p>
-                        I am currently pursuing a dual degree in Computer Science and Mathematics at Binghamton University. I am part of SWE 
-                        program of iX.
-                    </p>
-                    <p>
-                        In my role as a Software Team Member on Binghamton University’s Mars Rover Competition team, I have played a pivotal role in creating the control systems of our prototype. Collaborating closely with a multidisciplinary team, I successfully integrated data from inertial measurement units (IMUs) and GPS devices, enabling real-time decision-making and autonomous operation. 
-                        I designed and implemented a communication program between the rover and the base station utilizing Dart, C, and Python programming languages, coupled with Raspberry Pi. This experience ensured efficient data exchange and troubleshooting capabilities, showcasing my expertise in software development and system integration.
-                    </p>
-                    <p>
-                        Additionally, as a researcher in the First-Year Research Immersion Program at Binghamton University, I collaborated with a team of seven students to develop an automatic strike zone detection system for baseball. By integrating OpenPose, a Python library, and YOLO, a deep learning algorithm, we achieved precise real-time object recognition, enabling us to track players' movements and positions on the field with 89% accuracy. We used PyTorch, a machine learning framework, specifically in training and optimizing the model that supported our object recognition and pose estimation program design. We used NumPy, a Python library to preprocess and manipulate data which improved the quality of our system in handling various data transformations and calculations.
-                    </p>
-                    <h3> If you want to connect with me, here is my github: <a href = "https://github.com/sammy170505">https://github.com/sammy170505</a> </h3>
-            </section>          
-            <footer>
-            </footer>
-        </section>
-        <script type="text/javascript" src="main.js"></script>
+    <body>
+        <header>
+                Samruddhi Deshpande
+        </header>
+        <div class = "row">
+        <div class = "col-sm-4 color-grid-item box-1"><img src="assets/img/WhatsApp Image 2024-05-21 at 09.21.36_14b72714.jpg" alt="Introduction Image"></div>
+        <div class = "col-sm-8 color-grid-item box-2">
+        <h3> Hi Everyone!! </h3>
+        <p>Lorem ipsum dolor sit amet. Ut dolorem eveniet in labore distinctio aut odio aperiam eum molestiae nesciunt est recusandae quam. In autem rerum nam neque quia et rerum ipsa est minima officiis qui deserunt quos non dolorum incidunt qui dolor exercitationem. Et impedit consequatur qui temporibus natus rem ratione deleniti sed ipsa galisum ad temporibus quisquam id atque magnam nam illo deleniti. A inventore galisum a nihil dolores aut optio galisum et illum nihil hic tempora omnis ut quam quibusdam et dolor expedita? Ad aperiam ipsam non quis facere qui fugiat molestiae At omnis incidunt qui quae natus? Sit possimus iste sit consequatur omnis cum accusamus sequi ut iste sequi. Et eligendi dolores et autem eius aut blanditiis ipsa ab quia nemo hic laborum enim.        </p>
+        <p>A iure molestiae ut dolor cumque quo sunt porro ea modi accusamus eum dolores voluptatem et beatae magnam a voluptates galisum? Nam accusantium itaque rem sunt commodi cum nihil libero. Qui placeat tempore qui fuga quas qui galisum aperiam est unde eaque non voluptas eius quo autem iure. Ut optio unde ut iusto galisum id pariatur adipisci vel ipsam nihil et nihil architecto. Eum soluta voluptas aut enim quam ea ratione sunt non nihil eligendi et facilis quia.</p>
+        <p>Et eveniet iure sed eligendi quia sed voluptatem consequatur! Id laborum repellendus aut placeat quod et error dignissimos cum molestiae rerum ut voluptates unde. Ut quibusdam repellat in numquam perspiciatis aut quia dolore ut itaque suscipit! Aut soluta necessitatibus ut omnis placeat et enim ipsum qui fugit impedit? Sed aperiam excepturi ut velit repellat et odit consequatur ut vitae repellendus. Aut iusto excepturi et unde explicabo in consequatur autem ut Quis numquam aut tenetur molestiae qui internos aperiam. Et laudantium dolores aut mollitia doloribus non magnam tempore et excepturi voluptatem ea possimus velit ut veniam inventore id voluptatibus quod.</p>
+        <button type="button" class="btn btn-info">Get in Touch!</button>
+        </div>
+    </div>
     </body>
 </html>
