HW 2 Final Submission with github link

--- a/idex.html
+++ b/idex.html
@@ -20,7 +20,10 @@
         <p>Lorem ipsum dolor sit amet. Ut dolorem eveniet in labore distinctio aut odio aperiam eum molestiae nesciunt est recusandae quam. In autem rerum nam neque quia et rerum ipsa est minima officiis qui deserunt quos non dolorum incidunt qui dolor exercitationem. Et impedit consequatur qui temporibus natus rem ratione deleniti sed ipsa galisum ad temporibus quisquam id atque magnam nam illo deleniti. A inventore galisum a nihil dolores aut optio galisum et illum nihil hic tempora omnis ut quam quibusdam et dolor expedita? Ad aperiam ipsam non quis facere qui fugiat molestiae At omnis incidunt qui quae natus? Sit possimus iste sit consequatur omnis cum accusamus sequi ut iste sequi. Et eligendi dolores et autem eius aut blanditiis ipsa ab quia nemo hic laborum enim.        </p>
         <p>A iure molestiae ut dolor cumque quo sunt porro ea modi accusamus eum dolores voluptatem et beatae magnam a voluptates galisum? Nam accusantium itaque rem sunt commodi cum nihil libero. Qui placeat tempore qui fuga quas qui galisum aperiam est unde eaque non voluptas eius quo autem iure. Ut optio unde ut iusto galisum id pariatur adipisci vel ipsam nihil et nihil architecto. Eum soluta voluptas aut enim quam ea ratione sunt non nihil eligendi et facilis quia.</p>
         <p>Et eveniet iure sed eligendi quia sed voluptatem consequatur! Id laborum repellendus aut placeat quod et error dignissimos cum molestiae rerum ut voluptates unde. Ut quibusdam repellat in numquam perspiciatis aut quia dolore ut itaque suscipit! Aut soluta necessitatibus ut omnis placeat et enim ipsum qui fugit impedit? Sed aperiam excepturi ut velit repellat et odit consequatur ut vitae repellendus. Aut iusto excepturi et unde explicabo in consequatur autem ut Quis numquam aut tenetur molestiae qui internos aperiam. Et laudantium dolores aut mollitia doloribus non magnam tempore et excepturi voluptatem ea possimus velit ut veniam inventore id voluptatibus quod.</p>
-        <button type="button" class="btn btn-info">Get in Touch!</button>
+        <a href="https://github.com/sammy170505" class="btn btn-outline-dark" target="_blank">
+            <i class="bi bi-github" aria-hidden="true"></i>
+            GitHub
+          </a>
         </div>
     </div>
     </body>
